2002-02-11  Alexandre Oliva  <aoliva@redhat.com>

	* ld-sh/sh64/reldl64.rd: Add relocation symbol data in info field.
	* ld-sh/sh64/crange-2i.s: Add align to match align in crange-2h.s.
	* ld-sh/sh64/crange3-cmpct.rd: Adjust to reflect modifications
	in section ordering.
	* ld-sh/sh64/crange3-media.rd: Likewise.
	* ld-sh/sh64/crange3.rd: Likewise.
	* ld-sh/sh64/crange3.dd: Likewise.

	* ld-sh/shared-1.d: Fix relocation addend.

2002-02-09  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix/bpo-21.d, ld-mmix/bpo-21m.d, ld-mmix/bpo-11.s: New
	tests.

2002-02-08  Alexandre Oliva  <aoliva@redhat.com>

	Contribute sh64-elf.
	2002-02-02  Alexandre Oliva  <aoliva@redhat.com>
	* ld-sh/sh64/crange3-cmpct.rd: Adjust offsets.
	* ld-sh/sh64/crange3-media.rd: Likewise.
	* ld-sh/sh64/crange3.rd: Likewise.
	* ld-sh/sh64/crangerel1.rd: Likewise.
	* ld-sh/sh64/crangerel2.rd: Likewise.
	* ld-sh/sh64/reldl32.rd: Likewise.
	* ld-sh/sh64/reldl64.rd: Likewise.
	2002-01-28  Alexandre Oliva  <aoliva@redhat.com>
	* ld-sh/sh64/abi32.xd: Formatting changes to match the current
	output of objdump.
	* ld-sh/sh64/cmpct1.xd: Likewise.
	* ld-sh/sh64/crange1.rd: Likewise.
	* ld-sh/sh64/crange2.rd: Likewise.
	* ld-sh/sh64/crange3-cmpct.rd: Likewise.
	* ld-sh/sh64/crange3-media.rd: Likewise.
	* ld-sh/sh64/crange3.rd: Likewise.
	* ld-sh/sh64/crangerel1.rd: Likewise.
	* ld-sh/sh64/crangerel2.rd: Likewise.
	* ld-sh/sh64/mix1.xd: Likewise.
	* ld-sh/sh64/mix2.xd: Likewise.
	* ld-sh/sh64/rel32.xd: Likewise.
	* ld-sh/sh64/reldl32.rd: Likewise.
	* ld-sh/sh64/reldl64.rd: Likewise.
	* ld-sh/sh64/sh64.exp: Likewise.  Reordered cranges and stack
	sessions, to match changes in the linker script.
	2001-06-14  Alexandre Oliva  <aoliva@redhat.com>
	* ld-sh/sh64/reldl32.rd, ld-sh/sh64/reldl64.rd: Adjust relocation
	info to reflect renumbering of relocation types.
	2001-03-14  DJ Delorie	<dj@redhat.com>
	* ld-sh/sh64/endian.dbd: New file, endian tests.
	* ld-sh/sh64/endian.dld: Ditto.
	* ld-sh/sh64/endian.ld:	 Ditto.