@@ -1,0 +1,6 @@
+ .section .debug_info
+ .byte 42
+ .rept 32763
+ .byte 0
+ .endr
+ .byte 43
