@@ -1,0 +1,6 @@
+ .section .debug_info
+ .byte 44
+ .rept 32764
+ .byte 0
+ .endr
+ .byte 45
