@@ -1,0 +1,6 @@
+ .section .debug_info
+ .byte 46
+ .rept 32765
+ .byte 0
+ .endr
+ .byte 47
