@@ -1,0 +1,6 @@
+ .section .debug_info
+ .byte 48
+ .rept 32766
+ .byte 0
+ .endr
+ .byte 49
