@@ -1,0 +1,6 @@
+ .section .debug_info
+ .byte 50
+ .rept 32767
+ .byte 0
+ .endr
+ .byte 51
